# dont-kill-the-flower

./: .gitignore  README.org  main.py  pyproject.toml  sentiment.py  sentimiento.py
static/: animation.js  demo.js  main.js  movie.webm  service-worker.js  styles.css
templates/: demo.html  index.html
